[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/kimberley bl.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Level_Components/Level_Elements/TextBox.gd" type="Script" id=3]
[ext_resource path="res://Assets/Robby/waveWITHBG.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[node name="TextBox" type="CanvasLayer"]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "To change text box position, send \"IDE\", \"CODE_BLOCK\", and \"DEFAULT\" into the queue"
}

[node name="TextBoxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -330.0
margin_right = -150.0
margin_bottom = -30.0
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="TextBoxContainer"]
margin_right = 1620.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="DialogueContainer" type="MarginContainer" parent="TextBoxContainer"]
margin_right = 1620.0
margin_bottom = 300.0
custom_constants/margin_right = 25
custom_constants/margin_top = 68
custom_constants/margin_left = 250
custom_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="TextBoxContainer/DialogueContainer"]
visible = false
margin_left = 250.0
margin_top = 68.0
margin_right = 1595.0
margin_bottom = 275.0

[node name="End" type="Label" parent="TextBoxContainer/DialogueContainer"]
margin_left = 1234.0
margin_top = 243.0
margin_right = 1595.0
margin_bottom = 275.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "(Press SPACEBAR to continue)"

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/DialogueContainer"]
margin_left = 250.0
margin_top = 68.0
margin_right = 1595.0
margin_bottom = 275.0

[node name="Text" type="RichTextLabel" parent="TextBoxContainer/DialogueContainer/HBoxContainer"]
margin_right = 1345.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = SubResource( 7 )
custom_fonts/italics_font = SubResource( 9 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "ur mom"
text = "ur mom"

[node name="PictureContainer" type="MarginContainer" parent="TextBoxContainer"]
margin_right = 1620.0
margin_bottom = 300.0
custom_constants/margin_right = 1375
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="Sprite" type="Sprite" parent="TextBoxContainer/PictureContainer"]
position = Vector2( 127, 145 )
scale = Vector2( 0.75, 0.799562 )
texture = ExtResource( 4 )

[node name="HeaderContainer" type="MarginContainer" parent="TextBoxContainer"]
margin_right = 1620.0
margin_bottom = 300.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 250
custom_constants/margin_bottom = 225

[node name="Robby" type="Label" parent="TextBoxContainer/HeaderContainer"]
margin_left = 250.0
margin_top = 25.0
margin_right = 350.0
margin_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Robby"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
